resolved edit form z-index issue

--- a/react-app/src/components/DisplayPhoto/DisplayPhoto.css
+++ b/react-app/src/components/DisplayPhoto/DisplayPhoto.css
@@ -11,35 +11,21 @@
 .rtpDP:hover {
   transform: translate3D(0, -1px, 0) scale(1.5);
   animation: pulse 1s infinite;
-  @keyframes pulse {
-    0% {
-      -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 1);
-      box-shadow: 0 0 0 0 rgba(255,255,255, 1);
-    }
-    50% {
-        -moz-box-shadow: 0 0 0 10px rgba(255,255,255, 0);
-        box-shadow: 0 0 0 10px rgba(255,255,255, 0);
-    }
-    100% {
-        -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0);
-        box-shadow: 0 0 0 0 rgba(255,255,255, 0);
-    }
-  }
 }
 .displayPhoto {
   display: flex;
   align-items: center;
+  width: 75vw;
 }
 .displayPhoto > img {
-  transition: all 0.8s ease;
+  transition: all 1s ease;
   margin-top: 10vh;
   margin-bottom: 5vh;
-  margin-left: 5vw;
+  margin-left: 15vw;
   border-radius: 5%;
   box-shadow: 1em 0 0.4em 1em rgba(0, 0, 0, 0.3),
     1em 0.4em 0.4em 1em rgba(0, 0, 0, 0.5);
   height: 30vh;
-  transition: ease 0.5s all;
 }
 .displayPhoto > img:hover {
   transform: scale(1.5);
@@ -69,20 +55,6 @@
   box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
   opacity: 1;
   animation: pulse 1s infinite;
-  @keyframes pulse {
-    0% {
-      -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 1);
-      box-shadow: 0 0 0 0 rgba(255,255,255, 1);
-    }
-    50% {
-        -moz-box-shadow: 0 0 0 10px rgba(255,255,255, 0);
-        box-shadow: 0 0 0 10px rgba(255,255,255, 0);
-    }
-    100% {
-        -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0);
-        box-shadow: 0 0 0 0 rgba(255,255,255, 0);
-    }
-  }
 }
 .createCommentDivB {
   width: 70vw;
