--- a/react-app/src/components/Feed/Feed.css
+++ b/react-app/src/components/Feed/Feed.css
@@ -1,39 +1,42 @@
 .imgClass {
-  width: 35vw;
-  height: 30vh;
+  width: 15vw;
+  height: 15vh;
   /* border-radius: 50%; */
   transition: all 0.8s ease;
-  margin-right: 2vw;
+  /* margin-right: 2vw;
   margin-left: 2vw;
-  margin-top: 4vh;
+  margin-top: 4vh; */
   overflow: hidden;
   opacity: 0.5;
   border-radius: 10px;
   box-shadow: 1em 0 0.4em rgba(0, 0, 0, 0.3), 1em 0.4em 0.4em rgba(0, 0, 0, 0.5);
   filter: saturate(30%);
+  position: absolute;
 }
+
 .imgClass:hover {
   transform: translate3D(0, -1px, 0) scale(1.15);
   border: none;
   opacity: 1;
   filter: saturate(100%);
   animation: pulse 1s infinite;
-  @keyframes pulse {
-    0% {
-      -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 1);
-      box-shadow: 0 0 0 0 rgba(255,255,255, 1);
-    }
-    50% {
-        -moz-box-shadow: 0 0 0 10px rgba(255,255,255, 0);
-        box-shadow: 0 0 0 10px rgba(255,255,255, 0);
-    }
-    100% {
-        -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0);
-        box-shadow: 0 0 0 0 rgba(255,255,255, 0);
-    }
-  }
+}
+.imgDiv {
+  /* display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; */
+  border-radius: 5px;
+  transition: all 0.4s ease;
+  margin: 3vw;
+  height: 12vh;
+  width: 10vw;
 }
 
+.captionTag{
+  font-size: small;
+  position: relative;
+}
 .photoTitle {
   display: flex;
   justify-content: center;
@@ -55,18 +58,40 @@
   height: 80vh;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
 .feedDiv {
-  margin-bottom: 1vh;
-  margin-top: 1vh;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-around;
-  width: 65vw;
+  width: 55vw;
   height: 70vh;
+
+}
+#feedMain {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+#feedWrap{
+  display: flex;
+}
+#feedBackground {
+  backdrop-filter: blur(5px);
+  border-radius: 15px;
+  transition: all 0.4s ease;
+  margin-right: 1vw;
   overflow: scroll;
   overflow-x: hidden;
+}
+#edDiv{
+  display: flex;
+  flex-direction: column;
+}
+form{
+  z-index: 3;
 }
 .captionTag {
   margin-left: 10px;
@@ -87,14 +112,6 @@ p {
 .del-photo-btn:hover {
   cursor: pointer;
   color: #f4eea9;
-}
-.imgDiv {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px;
-  transition: all 0.4s ease;
 }
 
 .createCommentDiv {
@@ -121,22 +138,7 @@ p {
 .createPhotoCommentDiv:hover {
   box-shadow: inset 0 0 5px 3px whitesmoke;
 }
-#feedMain {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-}
-#edDiv {
-  display: flex;
-  justify-content: center;
-}
-#feedBackground {
-  backdrop-filter: blur(5px);
-  border-radius: 15px;
-  transition: all 0.4s ease;
-  margin-right: 1vw;
-}
+
 .addPhotoBtnDiv {
   display: flex;
   justify-content: flex-end;
@@ -165,53 +167,9 @@ p {
   box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
   opacity: 1;
   animation: pulse 1s infinite;
-  @keyframes pulse {
-    0% {
-      -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 1);
-      box-shadow: 0 0 0 0 rgba(255,255,255, 1);
-    }
-    50% {
-        -moz-box-shadow: 0 0 0 10px rgba(255,255,255, 0);
-        box-shadow: 0 0 0 10px rgba(255,255,255, 0);
-    }
-    100% {
-        -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0);
-        box-shadow: 0 0 0 0 rgba(255,255,255, 0);
-    }
-  }
 }
-.photoCommentsDiv {
-  display: flex;
-  justify-content: space-between;
-  background-color: rgba(0, 0, 0, 0.61);
-  margin: 5px;
-  color: white;
-  font-size: x-small;
-  border-radius: 5px;
-  padding: 5px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  border: 1px solid rgb(136, 136, 136);
-  transition: all 0.4s ease;
-}
-.photoCommentsDiv:hover {
-  background-color: white;
-  color: rgba(0, 0, 0, 0.61);
-}
-::-webkit-scrollbar {
-  width: 20px;
-}
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px whitesmoke;
-  border-radius: 10px;
-}
-::-webkit-scrollbar-thumb {
-  background: rgba(136, 136, 136, 0.35);
-  border-radius: 10px;
-  transition: all 1s ease;
-}
-::-webkit-scrollbar-thumb:hover {
-  box-shadow: inset 0 0 15px white;
-}
+
+
 .updateBarInput {
   box-shadow: inset 0 0 5px whitesmoke;
   border-radius: 10px;
@@ -223,12 +181,15 @@ p {
   margin-left: 5px;
   transition: all 0.4s ease;
   opacity: 0.25;
+  z-index: 3;
+
 }
 .recIcon:hover {
   opacity: 1;
 }
 .editIcon {
   transition: all 0.4s ease;
+  z-index: 3;
 }
 .recIcon:hover {
   transform: translate3D(0, -1px, 0) scale(1.5);
@@ -237,10 +198,6 @@ p {
   transform: translate3D(0, -1px, 0) scale(1.5);
 }
 
-.belowPicDiv {
-  display: flex;
-  /* justify-content: space-around; */
-}
 .usersLinkDiv {
   margin-left: 6vw;
 }
@@ -270,4 +227,20 @@ button:hover {
 }
 .lLogo:hover {
   transform: translate3D(0, 1vh, 0);
+}
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px whitesmoke;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(136, 136, 136, 0.35);
+  border-radius: 10px;
+  transition: all 1s ease;
+}
+::-webkit-scrollbar-thumb:hover {
+  box-shadow: inset 0 0 15px white;
 }
