--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -10,7 +10,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
-  
+
 }
 
 #root{
@@ -19,6 +19,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .welcomeMessage {
